5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1616_2938.log
== SUBMITION (2019-04-01 15:08:18) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math radians input*
c= (a**2)+(b**2)-2(a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.204787
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math radians input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:43) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math radians input*
c= (a**2)+(b**2)-2(a*b*cos(y))**1/2
print(round(c, 2)
-- ERROR:
File "XXXX", line 5
    from math radians input*
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:17:55) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians input*
c= (a**2)+(b**2)-2(a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.163554
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians input*
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:18:18) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians input*
c= (a**2+b**2-2(a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.176373
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians input*
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:18:22) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math radians input*
c= (a**2+b**2-2(a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.165055
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math radians input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:18:24) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math radians input*
c= (a**2+b**2-2(a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.121559
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math radians input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:08) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math radians input*
c= (a**2+b**2)-2(a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.177914
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math radians input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:23) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-2(a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.114563
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:21:57) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-2a*b*cos(y)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.199187
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:21:58) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-2a*b*cos(y)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.178195
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:15) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math radians input*
c= (a**2+b**2)-2a*b*cos(y)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.217511
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math radians input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:51) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-(2a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.210824
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:53) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-(2a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.149173
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:58) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math radians input*
c= (a**2+b**2)-(2a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.200057
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math radians input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:00) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math radians input*
c= (a**2+b**2)-(2a*b*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.194688
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math radians input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:52:16) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-(2a*b*radianscos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.154933
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:52:18) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-(2a*b*radians cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.146142
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:52:23) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-(2a*b*radians*cos(y))**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.163968
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:52:37) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2)-(2a*b*radianscosy**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.163602
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:01) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2-2a*b*radianscosy**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.184282
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:03) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2-2a*b*radianscosy**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.14467
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:03) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2-2a*b*radianscosy**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.138309
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:09) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2-2a*b*cosy**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.202817
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:10) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2+b**2-2a*b*cosy**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.201154
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:54) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2)+(b**2)-(2a*b*cos(y)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.13841
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:55) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from math input*
c= (a**2)+(b**2)-(2a*b*cos(y)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.230078
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from math input*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:42) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians math input*
c= (a**2)+(b**2)-(2a*b*cos(y)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.175134
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians math input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:43) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians math input*
c= (a**2)+(b**2)-(2a*b*cos(y)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.172189
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians math input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:48) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians math input*
c= (a**2)+(b**2)-(2a*b*cosy**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.192643
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians math input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:49) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians math input*
c= (a**2)+(b**2)-(2a*b*cosy**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.170825
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians math input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:52) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians math input*
c= (a**2)+(b**2)-(2a*b*cosy)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.143971
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians math input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:53) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians math input*
c= (a**2)+(b**2)-(2a*b*cosy)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.252765
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians math input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:53) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians math input*
c= (a**2)+(b**2)-(2a*b*cosy)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.201845
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians math input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:53) 
-- CODE:
a= int(input("distancia de a: "))
b= int(input("distncia de b: "))
y= int(input("angulo entre a e b"))

from radians math input*
c= (a**2)+(b**2)-(2a*b*cosy)**1/2
print(round(c, 2)
-- EXECUTION TIME:
0.229435
-- ERROR:
  File "/home/codebench/codes/1616/2938/main.py", line 5
    from radians math input*
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
